# try-sdf

./: .gitignore  README.md  TUTORIAL_REVIEW.md  justfile  pyproject.toml  requirements.txt  run_demo.sh
titanic/: workspace.sdf.yml
titanic/metadata/raw/: raw_titanic.sdf.yml
titanic/metadata/staging/: rename_cols.sdf.yml.OFF
titanic/models/analytics/: convert_age.sql  passenger_survival.sql
titanic/models/raw/: nulls.sql  raw_titanic.sdf.yml
titanic/models/staging/: drop_cols.sql  dropping.sql  raw_titanic.sql  rename_cols.sql  renaming.sql  tests.sdf.yml  typing.sql
titanic/notebooks/: titanic-verify.ipynb
titanic/seeds/: titanic3.csv
