[project]
name = "try-sdf"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"},
]
dependencies = [
    "duckdb>=1.0.0",
    "pandas>=2.2.2",
    "plotly>=5.22.0",
    "itables>=2.1.3",
    "notebook>=7.2.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "Apache 2.0"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "black[jupyter]>=24.4.2",
]
