[project]
name = "try-sdf"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"},
]
dependencies = [
    "duckdb>=1.0.0",
    "pandas>=2.2.2",
    "plotly>=5.22.0",
    "itables>=2.1.3",
    "notebook>=7.2.1",
    "ydata-profiling>=4.8.3",
    "numpy>=1.26.4",
    "ipywidgets>=8.1.3",
    "lxml>=5.2.2",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "Apache 2.0"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "black[jupyter]>=24.4.2",
    "sqlfluff>=3.1.0",
]
